feat(api): add block/unblock user api
