# swagger/swagger.yaml
@@ -825,6 +825,122 @@ paths:
               schema:
                 '$ref': '#/components/schemas/ServerErrorResponse'
 
+  /user/{userId}/block:
+    put:
+      security:
+        - Authorization: []
+      summary: Block a given user based on request ID
+      tags:
+        - User
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          description: Unique id
+          schema:
+            type: string
+            minimum: 1
+            example: 639593f33994948bfb0756d0
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                    description:
+                  error:
+                    type: boolean
+                    example: false
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: User has been blocked successfully
+                  data:
+                    type: object
+                    properties:
+                      user:
+                        type: object
+                        '$ref': '#/components/schemas/AuthResponse'
+
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                '$ref': '#/components/schemas/BadRequestResponse'
+
+        '500':
+          description: 500 Internal Server Error
+          content:
+            application/json:
+              schema:
+                '$ref': '#/components/schemas/ServerErrorResponse'
+
+  /user/{userId}/unblock:
+    put:
+      security:
+        - Authorization: []
+      summary: Unblock a given user based on request ID
+      tags:
+        - User
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          description: Unique id
+          schema:
+            type: string
+            minimum: 1
+            example: 639593f33994948bfb0756d0
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                    description:
+                  error:
+                    type: boolean
+                    example: false
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: User has been unblocked successfully
+                  data:
+                    type: object
+                    properties:
+                      user:
+                        type: object
+                        '$ref': '#/components/schemas/AuthResponse'
+
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                '$ref': '#/components/schemas/BadRequestResponse'
+
+        '500':
+          description: 500 Internal Server Error
+          content:
+            application/json:
+              schema:
+                '$ref': '#/components/schemas/ServerErrorResponse'
+
   # Post
 
   /feed/posts:
@@ -3342,6 +3458,11 @@ components:
             type: object
             '$ref': '#/components/schemas/FollowUserScheme'
         followers:
+          type: array
+          items:
+            type: object
+            '$ref': '#/components/schemas/FollowUserScheme'
+        blocked:
           type: array
           items:
             type: object
